# BTS_gripper_ros

./: README.md
button_example/: onebutton.pde  twobuttons.pde
dynamixel-workbench/dynamixel_workbench_controllers/: CMakeLists.txt
dynamixel-workbench/dynamixel_workbench_controllers/config/: basic.yaml  joint_2_0.yaml  wheel_2_0.yaml
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: dynamixel_workbench_controllers.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: dynamixel_controllers_joint_absolute.launch  dynamixel_controllers_velocity.launch  dynamixel_controllers_wheel.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: dynamixel_workbench_controllers.cpp  dynamixel_workbench_controllers_absolute.cpp
dynamixel-workbench/dynamixel_workbench_operators/: CMakeLists.txt
dynamixel-workbench/dynamixel_workbench_operators/config/: finger_fold.yaml  finger_unfold.yaml  grip_to_size.yaml  initialize_to_max.yaml  motion_absolute.yaml
dynamixel-workbench/dynamixel_workbench_operators/include/dynamixel_workbench_operators/: joint_operator.h
dynamixel-workbench/dynamixel_workbench_operators/launch/: joint_operator_absolute.launch
dynamixel-workbench/dynamixel_workbench_operators/src/: joint_operator.cpp  joint_operator_tasks.cpp
hanyang_gripper_controller/: CMakeLists.txt  package.xml
hanyang_gripper_controller/config/: position.yaml  velocity.yaml
hanyang_gripper_controller/include/hanyang_gripper_controller/: hanyang_gripper_controller.h
hanyang_gripper_controller/launch/: gripper_controllers.launch  gripper_controllers_velocity.launch
hanyang_gripper_controller/msg/: reletive_pos.msg
hanyang_gripper_controller/src/: hanyang_gripper_controller.cpp  trajectory_generator.cpp
hanyang_gripper_controller/srv/: FingerCommand.srv
hanyang_gripper_operator/: CMakeLists.txt  package.xml
hanyang_gripper_operator/config/: finger_fold.yaml  finger_unfold.yaml  grip_to_size.yaml  initialize_to_max.yaml  motion.yaml  motion_absolute.yaml
hanyang_gripper_operator/include/hanyang_gripper_operator/: grip_operator.h  gripper_initialize.h
hanyang_gripper_operator/launch/: joint_operator.launch  joint_operator_absolute.launch  velocity_operator.launch
hanyang_gripper_operator/msg/: dish_size_msg.msg  dish_size_msg_points.msg  finger_vel_msg.msg
hanyang_gripper_operator/src/: grip_operator.cpp  gripper_initialize.cpp  velocity_operator.cpp
